[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
regex = "1.10.2"

[dev-dependencies]
paste = "1.0.14"
